# FlightsearcherQT

./: Airlines.cpp  Airlines.h  Airports.cpp  Airports.h  CMakeLists.txt  Flights.cpp  Flights.h  README.md  main.cpp
resources/: icon.icns
